update running app

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,9 +1,6 @@
 FROM python:latest
-RUN mkdir /homepage
-WORKDIR /homepage
-COPY server .
+WORKDIR server
+COPY . .
 RUN pip install gunicorn
-RUN python3 -m pip install -r requirements.txt
-ENV PYTHONPATH "${PYTHONPATH}:/homepage"
-EXPOSE 8080
-CMD [ "gunicorn", "-c", "gunicorn.conf", "homepage:app"]
+RUN pip install -r requirements.txt
+CMD ["gunicorn", "server:app", "--bind", "0.0.0.0:7878", "--worker-class", "aiohttp.worker.GunicornWebWorker"]
